Fixed overhang styling on mobile for project-section

--- a/content/assets/src/styles/project-section.scss
+++ b/content/assets/src/styles/project-section.scss
@@ -69,6 +69,20 @@
 		object-fit: contain;
 	}
 
+	@media screen and (max-width: 768px) {
+		&.overhang-right {
+			.content {
+				padding-right: 0;
+			}
+		}
+
+		.content {
+			.column {
+				width: 100% !important;
+			}
+		}
+	}
+
 	@media screen and (min-width: 769px) {
 		flex-direction: row;
 
